[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/GUI/InventoryScreen.gd" type="Script" id=1]
[ext_resource path="res://textures/UI/grey3.png" type="Texture" id=2]
[ext_resource path="res://textures/UI/grey1.png" type="Texture" id=3]
[ext_resource path="res://fonts/Exo2-Bold.otf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/Exo2-Regular.otf" type="DynamicFontData" id=5]
[ext_resource path="res://fonts/Exo2-Light.otf" type="DynamicFontData" id=6]
[ext_resource path="res://textures/UI/grey4.png" type="Texture" id=7]
[ext_resource path="res://Scenes/GUI/GUISubComponents/InventoryItem.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 29
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 6 )

[node name="Inventory" type="MarginContainer" groups=[
"main",
"gui",
]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -360.0
margin_right = 500.0
margin_bottom = 360.0
script = ExtResource( 1 )

[node name="Background" type="NinePatchRect" parent="."]
margin_right = 1000.0
margin_bottom = 720.0
texture = ExtResource( 2 )

[node name="MainContainer" type="MarginContainer" parent="."]
margin_right = 1000.0
margin_bottom = 720.0
rect_min_size = Vector2( 960, 680 )
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 980.0
margin_bottom = 700.0
custom_constants/separation = 15

[node name="ItemInfo" type="MarginContainer" parent="MainContainer/VBoxContainer"]
margin_right = 960.0
margin_bottom = 170.0
rect_min_size = Vector2( 0, 170 )

[node name="Background" type="NinePatchRect" parent="MainContainer/VBoxContainer/ItemInfo"]
margin_right = 960.0
margin_bottom = 170.0
texture = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/VBoxContainer/ItemInfo"]
margin_right = 960.0
margin_bottom = 170.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/VBoxContainer/ItemInfo/HBoxContainer"]
margin_right = 606.0
margin_bottom = 170.0
size_flags_horizontal = 3

[node name="ItemName" type="RichTextLabel" parent="MainContainer/VBoxContainer/ItemInfo/HBoxContainer/VBoxContainer"]
margin_right = 606.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
custom_fonts/normal_font = SubResource( 1 )
text = "Item Name
"
scroll_active = false

[node name="ItemType" type="RichTextLabel" parent="MainContainer/VBoxContainer/ItemInfo/HBoxContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 606.0
margin_bottom = 170.0
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 2 )
text = "Item Type"

[node name="StatsContainer" type="MarginContainer" parent="MainContainer/VBoxContainer/ItemInfo/HBoxContainer"]
margin_left = 610.0
margin_right = 960.0
margin_bottom = 170.0
rect_min_size = Vector2( 350, 0 )

[node name="ItemStats" type="RichTextLabel" parent="MainContainer/VBoxContainer/ItemInfo/HBoxContainer/StatsContainer"]
margin_right = 350.0
margin_bottom = 170.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 3 )
text = "Damage
Fire-rate:
Fire-mode:
Capacity:
Projectile-count:
"

[node name="GridSeperator" type="HBoxContainer" parent="MainContainer/VBoxContainer"]
margin_top = 185.0
margin_right = 960.0
margin_bottom = 680.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 224

[node name="Items" type="GridContainer" parent="MainContainer/VBoxContainer/GridSeperator"]
margin_right = 624.0
margin_bottom = 495.0
size_flags_horizontal = 3
custom_constants/vseparation = 15
custom_constants/hseparation = 15
columns = 5

[node name="00" type="NinePatchRect" parent="MainContainer/VBoxContainer/GridSeperator/Items"]
margin_right = 112.0
margin_bottom = 112.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )

[node name="InventoryItem" parent="MainContainer/VBoxContainer/GridSeperator/Items/00" instance=ExtResource( 8 )]

[node name="01" type="NinePatchRect" parent="MainContainer/VBoxContainer/GridSeperator/Items"]
margin_left = 127.0
margin_right = 239.0
margin_bottom = 112.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )

[node name="InventoryItem" parent="MainContainer/VBoxContainer/GridSeperator/Items/01" instance=ExtResource( 8 )]

[node name="02" type="NinePatchRect" parent="MainContainer/VBoxContainer/GridSeperator/Items"]
margin_left = 254.0
margin_right = 366.0
margin_bottom = 112.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )

[node name="InventoryItem" parent="MainContainer/VBoxContainer/GridSeperator/Items/02" instance=ExtResource( 8 )]

[node name="03" type="NinePatchRect" parent="MainContainer/VBoxContainer/GridSeperator/Items"]
margin_left = 381.0
margin_right = 493.0
margin_bottom = 112.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )

[node name="InventoryItem" parent="MainContainer/VBoxContainer/GridSeperator/Items/03" instance=ExtResource( 8 )]

[node name="04" type="NinePatchRect" parent="MainContainer/VBoxContainer/GridSeperator/Items"]
margin_left = 508.0
margin_right = 620.0
margin_bottom = 112.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )

[node name="InventoryItem" parent="MainContainer/VBoxContainer/GridSeperator/Items/04" instance=ExtResource( 8 )]

[node name="10" type="NinePatchRect" parent="MainContainer/VBoxContainer/GridSeperator/Items"]
margin_top = 127.0
margin_right = 112.0
margin_bottom = 239.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )

[node name="InventoryItem" parent="MainContainer/VBoxContainer/GridSeperator/Items/10" instance=ExtResource( 8 )]

[node name="11" type="NinePatchRect" parent="MainContainer/VBoxContainer/GridSeperator/Items"]
margin_left = 127.0
margin_top = 127.0
margin_right = 239.0
margin_bottom = 239.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )

[node name="InventoryItem" parent="MainContainer/VBoxContainer/GridSeperator/Items/11" instance=ExtResource( 8 )]

[node name="12" type="NinePatchRect" parent="MainContainer/VBoxContainer/GridSeperator/Items"]
margin_left = 254.0
margin_top = 127.0
margin_right = 366.0
margin_bottom = 239.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )

[node name="InventoryItem" parent="MainContainer/VBoxContainer/GridSeperator/Items/12" instance=ExtResource( 8 )]

[node name="13" type="NinePatchRect" parent="MainContainer/VBoxContainer/GridSeperator/Items"]
margin_left = 381.0
margin_top = 127.0
margin_right = 493.0
margin_bottom = 239.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )

[node name="InventoryItem" parent="MainContainer/VBoxContainer/GridSeperator/Items/13" instance=ExtResource( 8 )]

[node name="14" type="NinePatchRect" parent="MainContainer/VBoxContainer/GridSeperator/Items"]
margin_left = 508.0
margin_top = 127.0
margin_right = 620.0
margin_bottom = 239.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )

[node name="InventoryItem" parent="MainContainer/VBoxContainer/GridSeperator/Items/14" instance=ExtResource( 8 )]

[node name="20" type="NinePatchRect" parent="MainContainer/VBoxContainer/GridSeperator/Items"]
margin_top = 254.0
margin_right = 112.0
margin_bottom = 366.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )

[node name="InventoryItem" parent="MainContainer/VBoxContainer/GridSeperator/Items/20" instance=ExtResource( 8 )]

[node name="21" type="NinePatchRect" parent="MainContainer/VBoxContainer/GridSeperator/Items"]
margin_left = 127.0
margin_top = 254.0
margin_right = 239.0
margin_bottom = 366.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )

[node name="InventoryItem" parent="MainContainer/VBoxContainer/GridSeperator/Items/21" instance=ExtResource( 8 )]

[node name="22" type="NinePatchRect" parent="MainContainer/VBoxContainer/GridSeperator/Items"]
margin_left = 254.0
margin_top = 254.0
margin_right = 366.0
margin_bottom = 366.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )

[node name="InventoryItem" parent="MainContainer/VBoxContainer/GridSeperator/Items/22" instance=ExtResource( 8 )]

[node name="23" type="NinePatchRect" parent="MainContainer/VBoxContainer/GridSeperator/Items"]
margin_left = 381.0
margin_top = 254.0
margin_right = 493.0
margin_bottom = 366.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )

[node name="InventoryItem" parent="MainContainer/VBoxContainer/GridSeperator/Items/23" instance=ExtResource( 8 )]

[node name="24" type="NinePatchRect" parent="MainContainer/VBoxContainer/GridSeperator/Items"]
margin_left = 508.0
margin_top = 254.0
margin_right = 620.0
margin_bottom = 366.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )

[node name="InventoryItem" parent="MainContainer/VBoxContainer/GridSeperator/Items/24" instance=ExtResource( 8 )]

[node name="30" type="NinePatchRect" parent="MainContainer/VBoxContainer/GridSeperator/Items"]
margin_top = 381.0
margin_right = 112.0
margin_bottom = 493.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )

[node name="InventoryItem" parent="MainContainer/VBoxContainer/GridSeperator/Items/30" instance=ExtResource( 8 )]

[node name="31" type="NinePatchRect" parent="MainContainer/VBoxContainer/GridSeperator/Items"]
margin_left = 127.0
margin_top = 381.0
margin_right = 239.0
margin_bottom = 493.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )

[node name="InventoryItem" parent="MainContainer/VBoxContainer/GridSeperator/Items/31" instance=ExtResource( 8 )]

[node name="32" type="NinePatchRect" parent="MainContainer/VBoxContainer/GridSeperator/Items"]
margin_left = 254.0
margin_top = 381.0
margin_right = 366.0
margin_bottom = 493.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )

[node name="InventoryItem" parent="MainContainer/VBoxContainer/GridSeperator/Items/32" instance=ExtResource( 8 )]

[node name="33" type="NinePatchRect" parent="MainContainer/VBoxContainer/GridSeperator/Items"]
margin_left = 381.0
margin_top = 381.0
margin_right = 493.0
margin_bottom = 493.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )

[node name="InventoryItem" parent="MainContainer/VBoxContainer/GridSeperator/Items/33" instance=ExtResource( 8 )]

[node name="34" type="NinePatchRect" parent="MainContainer/VBoxContainer/GridSeperator/Items"]
margin_left = 508.0
margin_top = 381.0
margin_right = 620.0
margin_bottom = 493.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )

[node name="InventoryItem" parent="MainContainer/VBoxContainer/GridSeperator/Items/34" instance=ExtResource( 8 )]

[node name="Gear" type="GridContainer" parent="MainContainer/VBoxContainer/GridSeperator"]
editor/display_folded = true
margin_left = 848.0
margin_right = 960.0
margin_bottom = 495.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 112, 0 )
custom_constants/vseparation = 15
custom_constants/hseparation = 15

[node name="05" type="NinePatchRect" parent="MainContainer/VBoxContainer/GridSeperator/Gear"]
margin_right = 112.0
margin_bottom = 112.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )

[node name="InventoryItem" parent="MainContainer/VBoxContainer/GridSeperator/Gear/05" instance=ExtResource( 8 )]

[node name="15" type="NinePatchRect" parent="MainContainer/VBoxContainer/GridSeperator/Gear"]
margin_top = 127.0
margin_right = 112.0
margin_bottom = 239.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )

[node name="InventoryItem" parent="MainContainer/VBoxContainer/GridSeperator/Gear/15" instance=ExtResource( 8 )]

[node name="25" type="NinePatchRect" parent="MainContainer/VBoxContainer/GridSeperator/Gear"]
margin_top = 254.0
margin_right = 112.0
margin_bottom = 366.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )

[node name="InventoryItem" parent="MainContainer/VBoxContainer/GridSeperator/Gear/25" instance=ExtResource( 8 )]

[node name="35" type="NinePatchRect" parent="MainContainer/VBoxContainer/GridSeperator/Gear"]
margin_top = 381.0
margin_right = 112.0
margin_bottom = 493.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 7 )

[node name="InventoryItem" parent="MainContainer/VBoxContainer/GridSeperator/Gear/35" instance=ExtResource( 8 )]

